# rust-knapsack

./: Cargo.toml  README.md
data/: 251.txt  502.txt
src/: app.rs  args.rs  knapsack.rs  lib.rs  main.rs  obj.rs
