[package]
name = "knapsack"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
derive_more = "0.99.17"
indicatif = "0.17.8"
num-traits = "0.2.19"
ordered-float = { version = "4.2.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
tabled = "0.15.0"
tap = "1.0.1"
thiserror = "1.0.61"
